--- a/package.json
+++ b/package.json
@@ -19,12 +19,13 @@
     "url": "git+https://github.com/A-Maged/object-breacher"
   },
   "devDependencies": {
+    "@hapi/hoek": "^9.1.1",
     "benchmark": "^2.1.4",
     "colors": "^1.4.0",
     "dot-prop": "^6.0.1",
+    "lodash": "^4.17.20",
     "nested-property": "^4.0.0",
     "object-path": "^0.11.5",
-    "@hapi/hoek": "^9.1.1",
     "typescript": "^4.1.3"
   }
 }
