--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "prepublish": "npm run build",
     "build": "rm -rf lib/* && tsc",
     "prebench": "npm run build",
-    "bench": "node bench.js"
+    "bench": "node bench.js",
+    "test": "jest"
   },
   "files": [
     "lib"
@@ -20,12 +21,15 @@
   },
   "devDependencies": {
     "@hapi/hoek": "^9.1.1",
+    "@types/jest": "^26.0.20",
     "benchmark": "^2.1.4",
     "colors": "^1.4.0",
     "dot-prop": "^6.0.1",
+    "jest": "^26.6.3",
     "lodash": "^4.17.20",
     "nested-property": "^4.0.0",
     "object-path": "^0.11.5",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3"
   }
 }
