--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "url": "git+https://github.com/A-Maged/object-breacher"
   },
   "devDependencies": {
+    "@babel/preset-typescript": "^7.12.7",
     "@hapi/hoek": "^9.1.1",
     "@types/jest": "^26.0.20",
+    "babel-loader": "^8.2.2",
     "benchmark": "^2.1.4",
     "colors": "^1.4.0",
     "dot-prop": "^6.0.1",
@@ -30,6 +32,8 @@
     "nested-property": "^4.0.0",
     "object-path": "^0.11.5",
     "ts-jest": "^26.4.4",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "webpack": "^5.14.0",
+    "webpack-cli": "^4.3.1"
   }
 }
