--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
   "exclude": ["src/*.test.ts"],
   "compilerOptions": {
     "declaration": true,
+    "emitDeclarationOnly": true,
     "outDir": "lib",
     "target": "ESNext",
     "module": "CommonJS",
