--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "object-breacher",
-  "version": "1.3.1",
+  "version": "1.4.1",
   "main": "lib/index.js",
   "homepage": "https://github.com/A-Maged/object-breacher#readme",
   "author": "a-maged",
@@ -21,16 +21,16 @@
   },
   "devDependencies": {
     "@babel/preset-typescript": "^7.12.7",
-    "@hapi/hoek": "^9.1.1",
+    "@hapi/hoek": "*",
     "@types/jest": "^26.0.20",
     "babel-loader": "^8.2.2",
     "benchmark": "^2.1.4",
     "colors": "^1.4.0",
-    "dot-prop": "^6.0.1",
+    "dot-prop": "*",
     "jest": "^26.6.3",
-    "lodash": "^4.17.20",
-    "nested-property": "^4.0.0",
-    "object-path": "^0.11.5",
+    "lodash": "*",
+    "nested-property": "*",
+    "object-path": "*",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "webpack": "^5.14.0",
